// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCallOut is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiCallOut euiCallOut--primary testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiCallOutHeader"
  >
    <span
      class="euiCallOutHeader__title"
    />
  </div>
  <div
    class="euiText euiText--small"
  >
    Content
  </div>
</div>
`;

exports[`EuiCallOut props color danger is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--danger"
>
  <div
    class="euiCallOutHeader"
  >
    <span
      class="euiCallOutHeader__title"
    />
  </div>
</div>
`;

exports[`EuiCallOut props color primary is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
>
  <div
    class="euiCallOutHeader"
  >
    <span
      class="euiCallOutHeader__title"
    />
  </div>
</div>
`;

exports[`EuiCallOut props color success is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--success"
>
  <div
    class="euiCallOutHeader"
  >
    <span
      class="euiCallOutHeader__title"
    />
  </div>
</div>
`;

exports[`EuiCallOut props color warning is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--warning"
>
  <div
    class="euiCallOutHeader"
  >
    <span
      class="euiCallOutHeader__title"
    />
  </div>
</div>
`;

exports[`EuiCallOut props iconType is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
>
  <div
    class="euiCallOutHeader"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiCallOutHeader__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiCallOutHeader__title"
    />
  </div>
</div>
`;

exports[`EuiCallOut props title is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
>
  <div
    class="euiCallOutHeader"
  >
    <span
      class="euiCallOutHeader__title"
    >
      Title
    </span>
  </div>
  <div
    class="euiText euiText--small"
  >
    Content
  </div>
</div>
`;
